2nd part of the 3-door-dungeon-game

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <div class="heading-section">
         <h1 class="heading">3 Door<br> DUNGEON </h1>
-        <input type="text" name="name" class="btn" placeholder="ENTER NAME">
+        <input type="text" name="name" class="btn" id="userName" placeholder="ENTER NAME" value="">
         <button type="button" class="subBtn" name="button">START GAME</button>
       </div>
       <div class="starting-section">
@@ -22,6 +22,19 @@
       </div>
       <div class="message-box">
         <p class="user-input"></p>
+      </div>
+      <div class="game-stage">
+        <span>Stage: </span>
+        <span class="stageNum">1</span>
+        <span>Lives: </span>
+        <span class="lifeNum">3</span>
+      </div>
+      <div class="game-asset">
+        <span>Inventory => </span>
+        <span >Swords: </span>
+        <span class="sword">0</span>
+        <span >Shields: </span>
+        <span class="shield">0</span>
       </div>
 
     <script src="index.js"></script>
