Final version of 3-door-dungeon-game

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Game of doors.</title>
+    <title>Game of doors. </title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <script src="https://kit.fontawesome.com/a1856ddf14.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Shojumaru|Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -36,6 +37,9 @@
         <span >Shields: </span>
         <span class="shield">0</span>
       </div>
+      <audio id="music" src="song.wav">
+
+      </audio>
 
     <script src="index.js"></script>
 
