Add music files

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <span >Shields: </span>
         <span class="shield">0</span>
       </div>
-      <audio id="music" src="song.wav">
+      <audio id="music" src="music.ogg">
 
       </audio>
 
